Issue #13: Fix text-alignment of links in profile sidebar.

--- a/css/page-profile.css
+++ b/css/page-profile.css
@@ -53,9 +53,6 @@
  .view-profile-sidebar .views-label {
    font-weight: bold;
  }
- .view-profile-sidebar .item-list ul {
-   text-align: left;
- }
  .view-profile-sidebar .item-list li {
    list-style-type: none;
    margin: 0;
